# algorithms

./: .gitignore  .pdm-python  README.md  kartsuba.py  pyproject.toml
src/: lib.rs  main.rs
src/algorithm/: __init__.py  main.py
tests/: test_rec_int_mult.py
