[project]
name = "algorithms"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "acatejr", email = "acatejr@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=5.0.0",
]
